<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/animeFragment"
        android:icon="@drawable/ic_anime"
        android:title="@string/nav_anime" />
    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/ic_library"
        android:title="@string/nav_watchlist" />
    <item
        android:id="@+id/iptvFragment"
        android:icon="@drawable/ic_tv"
        android:title="@string/nav_iptv" />
</menu>
